vyre-macros/tests/ui/missing_define_op_program.stderr
error: unexpected end of input, missing `program = ...`. Fix: provide an expression that builds a vyre Program.
  --> tests/ui/missing_define_op_program.rs:3:1
   |
3  | / define_op! {
4  | |     id = "primitive.bad.missing_program",
5  | |     dialect = "primitive.bad",
6  | |     category = A,
...  |
9  | |     laws = [],
10 | | }
   | |_^
   |
   = note: this error originates in the macro `define_op` (in Nightly builds, run with -Z macro-backtrace for more info)
